# DelphiFMX4Python

./: .buildinfo  .devdata.env  .gitattributes  .gitignore  .pypirc  LICENSE.md  MANIFEST.in  README.md  build.py  changelog.html  contributing.html  examples.html  faq.html  genindex.html  index.html  installation.html  license.md  objects.inv  pyproject.toml  quickstart.html  reference.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  tutorials_guides.html
.doctrees/: changelog.doctree  contributing.doctree  examples.doctree  faq.doctree  index.doctree  installation.doctree  quickstart.doctree  reference.doctree  tutorials_guides.doctree
.doctrees/changelog/: 1.0.3-changelog.doctree  1.0.4-changelog.doctree  1.0.5-changelog.doctree  1.0.6-changelog.doctree
.doctrees/reference/: delphifmx.Action.doctree  delphifmx.ActionList.doctree  delphifmx.AdapterListView.doctree  delphifmx.AniIndicator.doctree  delphifmx.AppearanceListView.doctree  delphifmx.Arc.doctree  delphifmx.ArcDial.doctree  delphifmx.BaseBindScopeComponent.doctree  delphifmx.BaseLinkingBindSource.doctree  delphifmx.BaseObjectBindSource.doctree  delphifmx.BaseValueRange.doctree  delphifmx.BasicAction.doctree  delphifmx.BasicBindComponent.doctree  delphifmx.BindComponentDelegate.doctree  delphifmx.BindingsList.doctree  delphifmx.BitmapTrackBar.doctree  delphifmx.Bounds.doctree  delphifmx.BufferedLayout.doctree  delphifmx.Button.doctree  delphifmx.CalloutPanel.doctree  delphifmx.CalloutRectangle.doctree  delphifmx.CameraComponent.doctree  delphifmx.CaretRectangle.doctree  delphifmx.CheckBox.doctree  delphifmx.CheckColumn.doctree  delphifmx.Circle.doctree  delphifmx.Collection.doctree  delphifmx.ColorBox.doctree  delphifmx.ColorButton.doctree  delphifmx.ColorComboBox.doctree  delphifmx.ColorListBox.doctree  delphifmx.ColorPanel.doctree  delphifmx.ColorPicker.doctree  delphifmx.ColorQuad.doctree  delphifmx.Column.doctree  delphifmx.ComboBox.doctree  delphifmx.ComboColorBox.doctree  delphifmx.ComboEdit.doctree  delphifmx.ComboEditBase.doctree  delphifmx.CommonCustomForm.doctree  (+186 more)
.doctrees/reference_index/: delphifmx_classes.doctree
.github/workflows/: copy_wheel.sh  deploy-wheels-lucioric.yml  deploy-wheels.yaml  deploy-wheels.yml  pypi.yml  sphinx-build.yaml  sphinx-build.yml  test.py  tests.yaml  tests.yml
_modules/: index.html
_sources/: changelog.rst.txt  contributing.rst.txt  examples.rst.txt  faq.md.txt  index.rst.txt  quickstart.rst.txt  tutorials_guides.rst.txt
_static/: custom.css
changelog/: 1.0.3-changelog.html  1.0.4-changelog.html  1.0.5-changelog.html  1.0.6-changelog.html
delphifmx/: __init__.py  __version__.py  _utils.py  bin_ext_module.py  darwin_arm.py  moduledefs.py
delphifmxx/: __init__.py
docs/: .buildinfo  comps_ref.html  genindex.html  index.html  installer.html  objects.inv  quickstart.html  requirements.txt  search.html  searchindex.js
docs/_static/: pngtosvg.py  (+1 more)
experts/: FMX.FormEditor.pas  README.md  dclDelphiFMXExperts.dpk  dclDelphiFMXExperts.dproj
images/: readme.md
reference/: delphifmx.Action.html  delphifmx.ActionList.html  delphifmx.AdapterListView.html  delphifmx.AniIndicator.html  delphifmx.AppearanceListView.html  delphifmx.Arc.html  delphifmx.ArcDial.html  delphifmx.BaseBindScopeComponent.html  delphifmx.BaseLinkingBindSource.html  delphifmx.BaseObjectBindSource.html  delphifmx.BaseValueRange.html  delphifmx.BasicAction.html  delphifmx.BasicBindComponent.html  delphifmx.BindComponentDelegate.html  delphifmx.BindingsList.html  delphifmx.BitmapTrackBar.html  delphifmx.Bounds.html  delphifmx.BufferedLayout.html  delphifmx.Button.html  delphifmx.CalloutPanel.html  delphifmx.CalloutRectangle.html  delphifmx.CameraComponent.html  delphifmx.CaretRectangle.html  delphifmx.CheckBox.html  delphifmx.CheckColumn.html  delphifmx.Circle.html  delphifmx.Collection.html  delphifmx.ColorBox.html  delphifmx.ColorButton.html  delphifmx.ColorComboBox.html  delphifmx.ColorListBox.html  delphifmx.ColorPanel.html  delphifmx.ColorPicker.html  delphifmx.ColorQuad.html  delphifmx.Column.html  delphifmx.ComboBox.html  delphifmx.ComboColorBox.html  delphifmx.ComboEdit.html  delphifmx.ComboEditBase.html  delphifmx.CommonCustomForm.html  (+186 more)
reference_index/: delphifmx_classes.html
samples/: HelloDelphiFMX.py  PasswordGenerator.py  README.md  Simplest.py  ToDoList.py
scripts/: linux_ubuntu_script_cp310  linux_ubuntu_script_cp37  linux_ubuntu_script_cp38  linux_ubuntu_script_cp39
tutorials/: readme.md
(+491 files in other folders)
