[build-system]
#requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
requires = ["setuptools>=40.9.0", "wheel"]

[tool.cibuildwheel]
build = ["cp36-*", "cp37-*", "cp38-*", "cp39-*"]
skip = ["pp*", "cp36-manylinux_aarch64", "cp37-manylinux_aarch64", "cp38-manylinux_aarch64"]
#archs = ["auto"]
#repair-wheel-command = ""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_24"
#manylinux-i686-image = "manylinux2010"
manylinux-aarch64-image = "manylinux2014"
#manylinux-ppc64le-image = "manylinux2014"
#manylinux-s390x-image = "manylinux2014"
#manylinux-pypy_x86_64-image = "manylinux2010"
#manylinux-pypy_i686-image = "manylinux2010"
#manylinux-pypy_aarch64-image = "manylinux2014"
archs = ["x86_64"]
repair-wheel-command = ""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["x86", "AMD64"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "delphifmx"
#version = "0.1.0"
description = ""
authors = ["Jim McKeth", "Lucas Belo<lucas.belo@live.com>", "Lucio Montero<lucioric2000@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6<3.10"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
