[build-system]
requires = [
    "setuptools >= 54",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "delphifmx/__version__.py"
git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"